# bad_path

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW_SUMMARY.md  pyproject.toml
.github/workflows/: build-conda.yml  build-wheels.yml  tests.yml
bad_path/: __init__.py  checker.py
conda.recipe/: meta.yaml
docs/: conf.py  installation.rst  usage.rst
tests/: test_checker.py  test_cwd_only.py  test_cwd_only_cross_platform.py  test_dangerous_path_error.py  test_get_dangerous_paths.py  test_invalid_characters.py  test_is_dangerous_path.py  test_is_sensitive_path.py  test_is_system_path.py  test_path_accessibility.py  test_path_checker.py  test_path_checker_call.py  test_path_checker_flags.py  test_path_checker_mode.py  test_user_defined_paths.py
