[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bad_path"
dynamic = ["version"]
description = "A Python package to identify potentially dangerous file paths"
readme = "README.md"
authors = [
    {name = "Gavin Burnell", email = "g.burnell@example.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coveralls>=3.0",
    "sphinx>=7.0",
    "sphinx-better-theme>=0.1.5",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/stonerlab/bad_path"
Documentation = "https://stonerlab.github.io/bad_path/"
Repository = "https://github.com/stonerlab/bad_path"
Issues = "https://github.com/stonerlab/bad_path/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bad_path*"]

[tool.setuptools.dynamic]
version = {attr = "bad_path.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["bad_path"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
